# mcp-runner

./: Dockerfile  README.md  entrypoint.sh  mcp-runner.code-workspace  pyproject.toml
.github/workflows/: publish-docker.yml  publish-library.yml
tts_mcp/: .env.example  pyproject.toml
tts_mcp/src/tts_mcp/: __init__.py  main.py
tts_mcp/src/tts_mcp/clients/: __init__.py  mac_ssh.py  minio.py
tts_mcp/src/tts_mcp/config/: __init__.py  base.py  mac_setting.py  minio_setting.py
tts_mcp/src/tts_mcp/setting/: init_bucket.py
tts_mcp/src/tts_mcp/tools/: __init__.py  tts.py
