[project]
name = "tts-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.23.1",
    "minio>=7.2.20",
    "paramiko>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/geonwprj/mcp-server/tts_mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_mcp"]
